manifests/teslamate/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: teslamate
  labels:
    env: home
spec:
  type: ClusterIP
  ports:
  - name: teslamate
    port: 4000
    targetPort: 4000
  selector:
    app: teslamate

---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: teslamate
  labels:
    env: home
spec:
  type: ClusterIP
  ports:
  - name: mosquitto
    port: 1883
    targetPort: 1883
  selector:
    app: mosquitto

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  namespace: teslamate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: auth-teslamate
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  labels:
    app: teslamate
    env: home
spec:
  tls:
  - hosts:
    - car.k8s.iaminyourpc.xyz
    secretName: tls-car-k8s-iaminyourpc-xyz
  rules:
  - host: car.k8s.iaminyourpc.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: teslamate
            port:
              number: 4000
